Add second operation, play with model classes
