# openapi-lombok/src/main/java/ch/schlau/pesche/apidocs/openapi_lombok/txproc/PurchaseAuthRequest.java
@@ -3,15 +3,15 @@ package ch.schlau.pesche.apidocs.openapi_lombok.txproc;
 import org.eclipse.microprofile.openapi.annotations.media.Schema;
 
 import ch.schlau.pesche.apidocs.openapi_lombok.txproc.model.RequestUuid;
+import ch.schlau.pesche.apidocs.openapi_lombok.txproc.model.Token;
 import lombok.Data;
 
-@Schema(description = "Request for checking a PIN")
+@Schema(description = "Request for authorizing a Purchase")
 @Data
-public class PinCheckRequest {
+public class PurchaseAuthRequest {
 
     @Schema(implementation = RequestUuid.class)
     private String uuid;
 
-    @Schema(description = "Encrypted binary data containing a PIN")
-    private String pinBlock;
+    private Token token;
 }
