# openapi-lombok/src/main/java/ch/schlau/pesche/apidocs/openapi_lombok/txproc/model/ApprovalCode.java
@@ -1,0 +1,7 @@
+package ch.schlau.pesche.apidocs.openapi_lombok.txproc.model;
+
+import org.eclipse.microprofile.openapi.annotations.media.Schema;
+
+@Schema(description = "Code referencing the successful authorization")
+public class ApprovalCode {
+}
